@@ -198,7 +198,16 @@ namespace System.Web.UI.WebControls
 			get { return ViewState.GetString ("SeparatorImageUrlField", String.Empty); }
 			set { ViewState ["SeparatorImageUrlField"] = value; }
 		}
+#if NET_4_0
+		public override string ToString ()
+		{
+			string dm = DataMember;
+			if (String.IsNullOrEmpty (dm))
+				return "(Empty)";
 
+			return dm;
+		}
+#endif
 		void IStateManager.LoadViewState (object savedState)
 		{
 			ViewState.LoadViewState (savedState);
